@startuml
class ChangeStaffPasswordPresenter {
    + ChangeStaffPasswordPresenter(view:IChangePasswordView, staff:StaffModel)
    + CanExit() : bool
    + <<override>> CleanUp() : void
}
class "BasePresenter`1"<T> {
}
"BasePresenter`1" "<IChangePasswordView>" <|-- ChangeStaffPasswordPresenter
IChildPresenter <|-- ChangeStaffPasswordPresenter
@enduml
